# C-prac

./: CMakeLists.txt  README.md  project02.c
practive/: BST.c  Hashing.c  LinkedList.c  aposint.c  fagets.c  filereading.c  leet.c  midtem.c  mthreaing.c  plaindrome.c  pointermath.c  ptrprac.c  read.c  readfn.c  readingiscool.c  recursion.c  recursiveLL.c  scanf.c
