cmake_minimum_required(VERSION 4.0)
project(untitled C)


set(CMAKE_C_STANDARD 11)

add_library(untitled STATIC library.c
        practive/pointermath.c
        practive/scanf.c
        practive/ptrprac.c
        practive/filereading.c
        practive/plaindrome.c
        practive/leet.c
        practive/read.c
        practive/readfn.c
        practive/fagets.c
        practive/readingiscool.c
        practive/aposint.c
        practive/midtem.c
        practive/BST.c
        practive/recursiveLL.c)
